fix: modal close button alignment on smaller screens (#165)
fix: modal close button alignment on smaller screens

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -42,9 +42,11 @@
 
 .modal-header .btn-close {
   --btn-close-width: 1.25rem;
+  align-self: flex-start;
 
   order: 1;
-  margin-right: calc(#{$btn-close-padding-x} * -1);
+  margin-top: calc(.25em + 1px);
+  margin-right: calc((#{$btn-close-padding-x} - 1px) * -1);
   color: $navy;
 }
 
